<resources>
    <string name="app_name">Fitness Studio</string>
    <string name="SplashScreeImage_description">image of our fit icon</string>
    <string name="_continue">Continue</string>
    <string name="getting_started">Getting Started</string>
    <string name="towards_a_healthy_lifestyle">Towards a Healthy Lifestyle</string>
    <string name="keep_the">Keep The\u0020</string>
    <string name="heart_healthy">Heart Healthy</string>
    <string name="no_beauty_shines_better">No beauty shines better</string>
    <string name="than_the_healthy_heart">than the healthy heart.</string>
    <string name="track_your">Track Your\u0020</string>
    <string name="health">Health</string>
    <string name="keep_track_on_your_health">Keep track on your health</string>
    <string name="to_keep_yourself_healthy">to keep yourself healthy.</string>
    <string name="stay">Stay\u0020</string>
    <string name="organized">Organized</string>
    <string name="organize_everything">Organize everything</string>
    <string name="in_life">in life.</string>
    <string name="welcome_to">Welcome To</string>
    <string name="find_everything_you_need">\u0020 Find everything you need</string>
    <string name="to_crush_your_fitness_goals">to crush your fitness goals!</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_number_to_continue">Enter number to continue</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="otp">OTP</string>
    <string name="a_6_digit_code_has_been_sent">A 6 digit code has been sent\nto +</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?\t</string>
    <string name="resend">RESEND</string>
    <string name="verify">Verify</string>
    <string name="enter_number">Enter Number</string>
    <string name="a_6_digit_otp_will_be_sent_via_sms_n_to_verify_your_phone_number">A 6 digit OTP will be sent via SMS\n to verify your phone number.</string>
    <string name="profile_photo">PROFILE PHOTO</string>
    <string name="enter_name">Enter name</string>
    <string name="track_vitals">TRACK VITALS</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="heart_rate">Heart rate</string>
    <string name="pedometer">Pedometer</string>
    <string name="utility">UTILITY</string>
    <string name="alarm">Alarm</string>
    <string name="event">Event</string>
    <string name="report">Report</string>
    <string name="share">Share report</string>
    <string name="quote">Nothing will work unless\nyou do</string>
    <string name="usage_place_your_index_finger_on_the_camera_nto_start_tracking_heart_rate">Usage- place your index finger on the camera to start tracking heart rate.</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Reset tracking</string>
    <string name="note">Note</string>
    <string name="the_result_provided_is_based_on_mathematical_calculation">The result provided is based on mathematical calculation.</string>
    <string name="result">Result</string>
    <string name="_0_bpm">0 BPM</string>
    <string name="undetermined">Undetermined</string>
    <string name="add_to_report">Add to report</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="camera_not_found">Camera not available.</string>
    <string name="calculated_graph">Calculated graph</string>
    <string name="heart_rate_calculation_start">Heart rate calculation started. Please wait.</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Heart rate calculated: %2.1f BPM</item>
        <item quantity="one">Heart rate calculated: %2.1f BPM</item>
        <item quantity="other">Heart rate calculated: %2.1f BPM</item>
    </plurals>
    <string name="usage_place_your_index_finger_on_the_camera_nto_start_tracking_blood_pressure">Usage- place your index finger on the camera to start tracking blood pressure.</string>
    <string name="calculated_graph_2">Calculated graph</string>
    <string name="blood_pressure_calculation_start">Blood pressure calculation started. Please wait.</string>
    <string name="pedometer_calculation_start">Steps Count calculation started. Please wait.</string>
    <plurals name="measurement_output_template_blood_pressure">
        <item quantity="zero">Blood pressure calculated: %2.1f mmHg</item>
        <item quantity="one">Blood pressure calculated: %2.1f mmHg</item>
        <item quantity="other">Blood pressure calculated: %2.1f mmHg</item>
    </plurals>
    <string name="add_new_event">Add new event.</string>
    <string name="_0">0</string>
    <string name="select_the_target_steps">Select the target steps</string>
    <string name="enter_email">Enter email</string>
    <string name="next">Next</string>
    <string name="hello_user_welcome_to_fitnessstudio">Hello user !! Welcome to FitnessStudio Portal !! </string>
    <string name="finish">Finish</string>
    <string name="subsrcibe">Subsrcibe</string>
    <string name="fitness_studio_subscription_plan">Fitness Studio Subscription Plan</string>
    <string name="buy_subscription">Buy subscription</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="subscriptionBuyButtonText">BUY</string>
    <string name="subscriptionPrice">Price</string>
    <string name="subscriptionDuration">duration</string>
    <string name="subscriptionName">Subscription_Name</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="name">Name</string>
    <string name="transaction_note">transaction_note</string>
    <string name="amount">Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitness_studio">Fitness Studio</string>
    <string name="no_internet_access_kindly_retry">No internet access.Kindly retry.</string>
    <string name="no_internet_access_nkindly_retry">No internet access.\nKindly retry.</string>
</resources>