<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_interface_fragments.HeartRateScreen"
    android:background="@color/lightBlack"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/usage_place_your_index_finger_on_the_camera_nto_start_tracking_heart_rate"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
        <pl.droidsonroids.gif.GifImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heart_rate_screen_animation"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_tracking"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_tracking"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:textSize="25sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:fontFamily="@font/inter_semibold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0_bpm"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:fontFamily="@font/inter_semibold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/undetermined"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:fontFamily="@font/inter_semibold"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_report_heart_rate"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_report"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:textSize="25sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:fontFamily="@font/inter_semibold"
            android:textSize="25sp"
            android:textColor="@color/blue"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:text="@string/the_result_provided_is_based_on_mathematical_calculation"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/quote_text_view_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:fontFamily="@font/inter_semibold"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:textAlignment="center"
            />
    </LinearLayout>
</LinearLayout>