<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_screen.SplashScreen4"
    android:background="@color/light_black"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:fontFamily="@font/inter_semibold"
            android:textAlignment="center"
            android:paddingTop="40dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/grey2"
            android:fontFamily="@font/inter_semibold"
            android:paddingTop="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingTop="10dp"
            android:text="@string/find_everything_you_need"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_crush_your_fitness_goals"
            android:textAlignment="center"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/grey2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fitness_studio_icon"
            android:contentDescription="@string/SplashScreeImage_description"
            android:paddingTop="150dp"
            android:scaleType="center"
            android:paddingBottom="50dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_started_button_splash_screen4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/get_started"
            android:paddingLeft="85dp"
            android:paddingRight="85dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_screen4_last_image"
            android:contentDescription="@string/SplashScreeImage_description"
            android:paddingTop="95dp"
            />
    </LinearLayout>
</FrameLayout>