<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_screen.LoginScreen3"
    android:background="@color/light_black"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fitness_studio_icon"
            android:contentDescription="@string/SplashScreeImage_description"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/blue"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_circle"
            android:contentDescription="@string/SplashScreeImage_description"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_text_name_login_screen3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/inter"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:paddingStart="5dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_button_login_screen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/_continue"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
    </LinearLayout>
</LinearLayout>